force-app/main/default/objects/Lead/fields/Acepta_terminos_y_condiciones__c.field-meta.xml
<CustomField>
    <fullName>Acepta_terminos_y_condiciones__c</fullName>
    <description>Válida si el candidato acepta los términos y condiciones expuestas durante la etapa de cultivación</description>
    <label>¿Acepta terminos y condiciones?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>