force-app/main/default/objects/Lead/fields/Acepta_trabajo_presencial__c.field-meta.xml
<CustomField>
    <fullName>Acepta_trabajo_presencial__c</fullName>
    <description>indica si el candidato está dispuesto a trabajar de manera presencial</description>
    <label>¿Acepta trabajo presencial?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>