force-app/main/default/objects/Lead/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica si el candidato está en proceso de reclutamiento o en espera de seguir el proceso</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>