force-app/main/default/objects/Lead/fields/Actualmente_est_estudiando__c.field-meta.xml
<CustomField>
    <fullName>Actualmente_est_estudiando__c</fullName>
    <description>Indica si el estudiante se encuentra estudiando en la actualidad en una institución educativa</description>
    <label>¿Actualmente está estudiando?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Decision</valueSetName>
    </valueSet>
</CustomField>