force-app/main/default/objects/Lead/fields/Aprobo__c.field-meta.xml
<CustomField>
    <fullName>Aprobo__c</fullName>
    <description>Indica si el candidato aprobó el test gorilla</description>
    <formula>IF( Resultado_Gorilla__c   &gt;= 0.65, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿Aprobó?</label>
    <type>Checkbox</type>
</CustomField>