force-app/main/default/objects/Lead/fields/Archivo_con_hoja_de_vida__c.field-meta.xml
<CustomField>
    <fullName>Archivo_con_hoja_de_vida__c</fullName>
    <label>Archivo con hoja de vida</label>
    <type>Url</type>
</CustomField>