force-app/main/default/objects/Lead/fields/Aspiraci_n_salarial__c.field-meta.xml
<CustomField>
    <fullName>Aspiraci_n_salarial__c</fullName>
    <description>Es la propuesta inicial de salarió que el candidato pide</description>
    <label>Aspiración salarial</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>