force-app/main/default/objects/Lead/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Candidatos</relationshipLabel>
    <relationshipName>Candidatos</relationshipName>
    <type>Lookup</type>
</CustomField>