force-app/main/default/objects/Lead/fields/Atencion_al_detalle__c.field-meta.xml
<CustomField>
    <fullName>Atencion_al_detalle__c</fullName>
    <description>Resultado obtenido en esta área en el test Gorilla</description>
    <label>Atención al detalle</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>