force-app/main/default/objects/Lead/fields/Calificacion_Psicotecnica__c.field-meta.xml
<CustomField>
    <fullName>Calificacion_Psicotecnica__c</fullName>
    <description>Resultado de la evaluación psicotécnica durante la entrevista</description>
    <label>Calificación Psicotécnica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nivel</valueSetName>
    </valueSet>
</CustomField>