force-app/main/default/objects/Lead/fields/Calificacion_Tecnica__c.field-meta.xml
<CustomField>
    <fullName>Calificacion_Tecnica__c</fullName>
    <description>Calificación que da el entrenador al candidato durante la entrevista técnica</description>
    <label>Calificación Técnica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nivel</valueSetName>
    </valueSet>
</CustomField>