force-app/main/default/objects/Lead/fields/Cargo2__c.field-meta.xml
<CustomField>
    <fullName>Cargo2__c</fullName>
    <description>Cargo que desempeñaba el candidato en la segunda referencia laboral</description>
    <label>Otro cargo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>