force-app/main/default/objects/Lead/fields/Carne_de_vacunas_COVID_19__c.field-meta.xml
<CustomField>
    <fullName>Carne_de_vacunas_COVID_19__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla de verificación para validar que se ha adjuntado el documento correspondiente</description>
    <label>Carné de vacunas COVID-19</label>
    <type>Checkbox</type>
</CustomField>