force-app/main/default/objects/Lead/fields/Certificado_policia__c.field-meta.xml
<CustomField>
    <fullName>Certificado_policia__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla de verificación para validar que se ha adjuntado el documento correspondiente</description>
    <label>Certificado policía</label>
    <type>Checkbox</type>
</CustomField>