force-app/main/default/objects/Lead/fields/Certificados_academicos__c.field-meta.xml
<CustomField>
    <fullName>Certificados_academicos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla de verificación para validar que se ha adjuntado el documento correspondiente</description>
    <label>Certificados académicos</label>
    <type>Checkbox</type>
</CustomField>