force-app/main/default/objects/Lead/fields/Certificados_personas_a_cargo__c.field-meta.xml
<CustomField>
    <fullName>Certificados_personas_a_cargo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla de verificación para validar que se ha adjuntado el documento correspondiente</description>
    <label>Certificados personas a cargo</label>
    <type>Checkbox</type>
</CustomField>