force-app/main/default/objects/Lead/fields/Ciudad_de_residencia2__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_de_residencia2__c</fullName>
    <description>Ciudad donde reside actualmente el candidato</description>
    <label>Ciudad de residencia</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Departamento__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Municipio</valueSetName>
    </valueSet>
</CustomField>