force-app/main/default/objects/Lead/fields/Conocimientos_t_cnicos__c.field-meta.xml
<CustomField>
    <fullName>Conocimientos_t_cnicos__c</fullName>
    <description>Lista de selección múltiple que consta de algunos de los principales lenguajes de programación para que el candidato indique en cuáles tiene un conocimiento técnico</description>
    <label>Conocimientos técnicos</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>Javascript</fullName>
            </value>
            <value>
                <fullName>C#</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>React</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>