force-app/main/default/objects/Lead/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <description>Departamento en el que reside actualmente el candidato</description>
    <label>Departamento de residencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Departamento</valueSetName>
    </valueSet>
</CustomField>