force-app/main/default/objects/Lead/fields/Documentos_faltantes1__c.field-meta.xml
<CustomField>
    <fullName>Documentos_faltantes1__c</fullName>
    <description>Campo personalizado oculto usado para el correo electrónico de documentos faltantes</description>
    <label>Documentos faltantes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>