force-app/main/default/objects/Lead/fields/Edad__c.field-meta.xml
<CustomField>
    <fullName>Edad__c</fullName>
    <description>Edad actual del candidato</description>
    <formula>FLOOR((Today() - Fecha_de_nacimiento__c)/365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>