force-app/main/default/objects/Lead/fields/Examen_medico__c.field-meta.xml
<CustomField>
    <fullName>Examen_medico__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla de verificación para validar que se ha adjuntado el documento correspondiente</description>
    <label>Examen médico</label>
    <type>Checkbox</type>
</CustomField>