force-app/main/default/objects/Lead/fields/Fecha_de_finalizaci_n2__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_finalizaci_n2__c</fullName>
    <description>Fecha de finalización de contrato de candidato en la segunda referencia laboral</description>
    <label>Otra Fecha de finalización</label>
    <type>Date</type>
</CustomField>