force-app/main/default/objects/Lead/fields/Fecha_de_finalizaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_finalizaci_n__c</fullName>
    <description>Fecha en la que terminó su contrato para la primera referencia laboral</description>
    <label>Fecha de finalización</label>
    <type>Date</type>
</CustomField>