force-app/main/default/objects/Lead/fields/Fecha_de_inicio2__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_inicio2__c</fullName>
    <description>Fecha de inicio de contrato del candidato en la segunda referencia laboral</description>
    <label>Otra Fecha de inicio</label>
    <type>Date</type>
</CustomField>