force-app/main/default/objects/Lead/fields/Fecha_de_inicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_inicio__c</fullName>
    <description>Fecha en la que inició su contrato para la primera referencia laboral</description>
    <label>Fecha de inicio</label>
    <type>Date</type>
</CustomField>