force-app/main/default/objects/Lead/fields/Fecha_de_nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_nacimiento__c</fullName>
    <description>Fecha de nacimiento candidato</description>
    <label>Fecha de nacimiento</label>
    <type>Date</type>
</CustomField>