force-app/main/default/objects/Lead/fields/Feedback_Entrevista_Psicot_cnica__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Entrevista_Psicot_cnica__c</fullName>
    <description>Información que se proporciona durante la entrevista, bien sea una retroalimentación, nota o comentario.</description>
    <inlineHelpText>Notas y/o comentarios de la entrevista</inlineHelpText>
    <label>Feedback Entrevista Psicotécnica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>