force-app/main/default/objects/Lead/fields/Feedback_Terminos_y_Condiciones__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Terminos_y_Condiciones__c</fullName>
    <description>Información que se proporciona durante la entrevista, bien sea una retroalimentación, nota o comentario.</description>
    <inlineHelpText>Notas y/o comentarios</inlineHelpText>
    <label>Feedback</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>