force-app/main/default/objects/Lead/fields/Hoja_de_vida__c.field-meta.xml
<CustomField>
    <fullName>Hoja_de_vida__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla de verificación para validar que se ha adjuntado el documento correspondiente</description>
    <label>Hoja de vida</label>
    <type>Checkbox</type>
</CustomField>