force-app/main/default/objects/Lead/fields/inicio_de_funciones__c.field-meta.xml
<CustomField>
    <fullName>inicio_de_funciones__c</fullName>
    <description>Campo que indica la fecha en las que se iniciaran las funciones del trabajo</description>
    <label>Inicio de funciones</label>
    <type>Date</type>
</CustomField>