force-app/main/default/objects/Lead/fields/Instituci_n_educativa_actual__c.field-meta.xml
<CustomField>
    <fullName>Instituci_n_educativa_actual__c</fullName>
    <description>Institución educativa en la que el candidato está estudiando actualmente</description>
    <label>Institución educativa actual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>