force-app/main/default/objects/Lead/fields/Institucion_Educativa__c.field-meta.xml
<CustomField>
    <fullName>Institucion_Educativa__c</fullName>
    <description>Institución educativa en la cual el candidato obtuvo su último título académico</description>
    <label>Institución Educativa</label>
    <length>80</length>
    <type>Text</type>
</CustomField>