force-app/main/default/objects/Lead/fields/Jefe_inmediato2__c.field-meta.xml
<CustomField>
    <fullName>Jefe_inmediato2__c</fullName>
    <description>Jefe inmediato de la segunda referencia laboral</description>
    <label>Otro Jefe inmediato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>