force-app/main/default/objects/Lead/fields/Jefe_inmediato__c.field-meta.xml
<CustomField>
    <fullName>Jefe_inmediato__c</fullName>
    <description>Jefe inmediato que tenía el empleado en su primera referencia laboral</description>
    <label>Jefe inmediato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>