force-app/main/default/objects/Lead/fields/Matematicas_basicas_de_tres_digitos__c.field-meta.xml
<CustomField>
    <fullName>Matematicas_basicas_de_tres_digitos__c</fullName>
    <label>Matemáticas básicas de tres dígitos</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>