force-app/main/default/objects/Lead/fields/Matematicas_intermedias__c.field-meta.xml
<CustomField>
    <fullName>Matematicas_intermedias__c</fullName>
    <description>Resultado obtenido en esta área en el test Gorilla</description>
    <label>Matemáticas intermedias</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>