force-app/main/default/objects/Lead/fields/Modalidad_de_trabajo__c.field-meta.xml
<CustomField>
    <fullName>Modalidad_de_trabajo__c</fullName>
    <description>Indica cual es el deseo principal del candidato para la modalidad de trabajo</description>
    <label>Modalidad de trabajo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presencial</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Híbrido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>