force-app/main/default/objects/Lead/fields/Motivo_de_descarte__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_descarte__c</fullName>
    <description>Razón por la cual el candidato es rechazado o eliminado de consideración para el proceso de reclutamiento.</description>
    <label>Motivo de descarte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Horarios laborales</fullName>
            </value>
            <value>
                <fullName>Salario de la oferta</fullName>
            </value>
            <value>
                <fullName>Condiciones del Pagaré</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Incompatibilidad con el puesto</fullName>
            </value>
            <value>
                <fullName>Condiciones del Pagare</fullName>
                <isActive>false</isActive>
                <label>Condiciones del Pagare</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>