force-app/main/default/objects/Lead/fields/Nivel_actual__c.field-meta.xml
<CustomField>
    <fullName>Nivel_actual__c</fullName>
    <description>Nivel o semestre actual cursado por el candidato en una institución educativa</description>
    <label>Nivel actual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nivel</valueSetName>
    </valueSet>
</CustomField>