force-app/main/default/objects/Lead/fields/Nivel_de_escolaridad__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_escolaridad__c</fullName>
    <description>Nivel de escolaridad que posee el candidato</description>
    <label>Nivel de escolaridad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bachiller</fullName>
            </value>
            <value>
                <fullName>Técnico</fullName>
            </value>
            <value>
                <fullName>Tecnólogo</fullName>
            </value>
            <value>
                <fullName>Profesional</fullName>
            </value>
            <value>
                <fullName>Especialización</fullName>
            </value>
            <value>
                <fullName>Maestría</fullName>
            </value>
            <value>
                <fullName>Doctorado</fullName>
            </value>
            <value>
                <fullName>Pregrado</fullName>
                <isActive>false</isActive>
                <label>Pregrado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>