force-app/main/default/objects/Lead/fields/Nombre_de_la_empresa2__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_la_empresa2__c</fullName>
    <description>Nombre de la empresa de la segunda referencia laboral</description>
    <label>Otro Nombre de la empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>