force-app/main/default/objects/Lead/fields/Notas__c.field-meta.xml
<CustomField>
    <fullName>Notas__c</fullName>
    <description>se ingresan las notas o informaciones adicionales sobre el descarte del candidato</description>
    <label>Notas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>