force-app/main/default/objects/Lead/fields/prueba_enriquesida__c.field-meta.xml
<CustomField>
    <fullName>prueba_enriquesida__c</fullName>
    <label>prueba enriquesida</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>