force-app/main/default/objects/Lead/fields/Razonamiento_numerico__c.field-meta.xml
<CustomField>
    <fullName>Razonamiento_numerico__c</fullName>
    <description>Resultado obtenido en esta área en el test Gorilla</description>
    <label>Razonamiento numérico</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>