force-app/main/default/objects/Lead/fields/Resultado_Gorilla__c.field-meta.xml
<CustomField>
    <fullName>Resultado_Gorilla__c</fullName>
    <formula>Assessment__r.Total_assessment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resultado Gorilla</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>