force-app/main/default/objects/Lead/fields/Resultados_test_Gorilla__c.field-meta.xml
<CustomField>
    <fullName>Resultados_test_Gorilla__c</fullName>
    <inlineHelpText>Adjunte aquí una captura de pantalla de los resultados obtenidos por el candidato.</inlineHelpText>
    <label>Resultados test Gorilla</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>