force-app/main/default/objects/Lead/fields/T_tulo_al_que_aspira__c.field-meta.xml
<CustomField>
    <fullName>T_tulo_al_que_aspira__c</fullName>
    <description>Título al que aspira el candidato de su formación académica actual</description>
    <label>Título al que aspira</label>
    <length>255</length>
    <type>Text</type>
</CustomField>