force-app/main/default/objects/Lead/fields/Test_gorilla_enviado__c.field-meta.xml
<CustomField>
    <fullName>Test_gorilla_enviado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla de verificación que indica que se envio el test gorilla al candidato</description>
    <label>¿Test gorilla enviado?</label>
    <type>Checkbox</type>
</CustomField>