force-app/main/default/objects/Lead/fields/Tiene_experiencia_laboral__c.field-meta.xml
<CustomField>
    <fullName>Tiene_experiencia_laboral__c</fullName>
    <description>Indica si el candidato ha tenido alguna experiencia laboral en otra empresa</description>
    <label>¿Tiene experiencia laboral?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Decision</valueSetName>
    </valueSet>
</CustomField>