force-app/main/default/objects/Lead/fields/Tiene_personas_a_cargo__c.field-meta.xml
<CustomField>
    <fullName>Tiene_personas_a_cargo__c</fullName>
    <label>¿Tiene personas a cargo?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>