force-app/main/default/objects/Lead/fields/Tipo_de_vinculaci_n_que_busca__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_vinculaci_n_que_busca__c</fullName>
    <description>Tipo de contrato preferido por el candidato</description>
    <label>Tipo de vinculación que busca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freelance</fullName>
            </value>
            <value>
                <fullName>Tiempo completo</fullName>
            </value>
            <value>
                <fullName>Medio tiempo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>