force-app/main/default/objects/Lead/fields/Titulo_adquirido__c.field-meta.xml
<CustomField>
    <fullName>Titulo_adquirido__c</fullName>
    <description>Título adquirido por el candidato en una institución educativa</description>
    <label>Título adquirido</label>
    <length>80</length>
    <type>Text</type>
</CustomField>