force-app/main/default/objects/Lead/fields/Total_Gorilla__c.field-meta.xml
<CustomField>
    <fullName>Total_Gorilla__c</fullName>
    <description>En este campo se almacena el porcentaje obtenido en la prueba test Gorilla</description>
    <label>Total Gorilla</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>