force-app/main/default/objects/Lead/recordTypes/Candidato.recordType-meta.xml
<RecordType>
    <fullName>Candidato</fullName>
    <active>true</active>
    <businessProcess>Reclutamiento</businessProcess>
    <description>Tipo de registro dedicado a las personas que aspiran ser empleados de la compañía en la división salesforce</description>
    <label>Candidato Salesforce</label>
</RecordType>