force-app/main/default/objects/Lead/recordTypes/CandidatoEvo.recordType-meta.xml
<RecordType>
    <fullName>CandidatoEvo</fullName>
    <active>true</active>
    <businessProcess>Reclutamiento evo</businessProcess>
    <description>Tipo de registro dedicado a las personas que aspiran ser empleados de la compañía en la división e-volution</description>
    <label>Candidato E-Volution</label>
</RecordType>