force-app/main/default/objects/Lead/recordTypes/Cliente.recordType-meta.xml
<RecordType>
    <fullName>Cliente</fullName>
    <active>true</active>
    <businessProcess>Reclutamiento</businessProcess>
    <description>Tipo de registro dedicado a las personas o empresas que desean adquirir los servicios de la compañía</description>
    <label>Cliente</label>
</RecordType>