force-app/main/default/objects/Lead/recordTypes/Descartado.recordType-meta.xml
<RecordType>
    <fullName>Descartado</fullName>
    <active>true</active>
    <businessProcess>Descartado</businessProcess>
    <description>Tipo de registro dedicado a las personas o empresas que han sido descartadas de su proceso</description>
    <label>Descartado</label>
</RecordType>