force-app/main/default/objects/Lead/validationRules/Institucion_actual.validationRule-meta.xml
<ValidationRule>
    <fullName>Institucion_actual</fullName>
    <active>true</active>
    <errorConditionFormula>IF( (ISPICKVAL( Actualmente_est_estudiando__c , &apos;SI&apos;)) &amp;&amp; (  ISBLANK( Instituci_n_educativa_actual__c )  )  , true, false)</errorConditionFormula>
    <errorDisplayField>Instituci_n_educativa_actual__c</errorDisplayField>
    <errorMessage>Indique la institución en la que está estudiando</errorMessage>
</ValidationRule>